Revert "changes made by QCT"
This reverts commit 9aa7c1c1b810f72033a242afa9b415f676f1a748.

 Changes to be committed:
	modified:   .github/workflows/maven.yml
	modified:   .mvn/wrapper/maven-wrapper.properties