@@ -161,7 +161,7 @@ public class RangerKmsAuthorizer implements Runnable, KeyACLs {
 		      }
 		    } catch (Exception ex) {
 		      LOG.warn(
-					  "Could not reload ACLs file: '%s'".formatted(ex.toString()), ex);
+		          String.format("Could not reload ACLs file: '%s'", ex.toString()), ex);
 		  }
 	  }
 	
@@ -266,9 +266,9 @@ public class RangerKmsAuthorizer implements Runnable, KeyACLs {
 		  	if (!hasAccess(aclType, ugi, key, clientIp)) {
 		  		KMSWebApp.getUnauthorizedCallsMeter().mark();
 		  		KMSWebApp.getKMSAudit().unauthorized(ugi, operation, key);
-		  		throw new AuthorizationException((
+		  		throw new AuthorizationException(String.format(
 		  				(!key.equals("")) ? UNAUTHORIZED_MSG_WITH_KEY
-									: UNAUTHORIZED_MSG_WITHOUT_KEY).formatted(
+	                        : UNAUTHORIZED_MSG_WITHOUT_KEY,
 	                        ugi.getShortUserName(), operation, key));
 		  	}
 	  }
