@@ -30,7 +30,6 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.io.IOException;
-import java.lang.reflect.InvocationTargetException;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.CompletionStage;
@@ -54,7 +53,7 @@ public class RangerKafkaAuthorizer implements Authorizer {
 
   private static String toString(AuthorizableRequestContext requestContext) {
     return requestContext == null ? null :
-			"AuthorizableRequestContext{principal=%s, clientAddress=%s, clientId=%s}".formatted(
+        String.format("AuthorizableRequestContext{principal=%s, clientAddress=%s, clientId=%s}",
             requestContext.principal(), requestContext.clientAddress(), requestContext.clientId());
   }
 
@@ -70,10 +69,7 @@ public class RangerKafkaAuthorizer implements Authorizer {
 
       activatePluginClassLoader();
 
-      rangerKafkaAuthorizerImpl = cls.getDeclaredConstructor().newInstance();
-    } catch (InstantiationException | IllegalAccessException | InvocationTargetException | NoSuchMethodException e) {
-      logger.error("Error Enabling RangerKafkaPlugin", e);
-      throw new IllegalStateException("Error Enabling RangerKafkaPlugin", e);
+      rangerKafkaAuthorizerImpl = cls.newInstance();
     } catch (Exception e) {
       logger.error("Error Enabling RangerKafkaPlugin", e);
       throw new IllegalStateException("Error Enabling RangerKafkaPlugin", e);
